--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,7 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,node,dotenv
+
+temp/*
+!temp/.gitkeep
+.wwebjs_auth
