--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-whatsapp-simple",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -15,6 +15,6 @@
     "prettier": "^2.7.1",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.18.2"
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#fix-buttons-list"
   }
 }
