puppeteer config added

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "api-whatsapp-simple",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "author": "6rak0",
   "license": "ISC",
