--- a/.gitignore
+++ b/.gitignore
@@ -179,5 +179,5 @@ dist
 # End of https://www.toptal.com/developers/gitignore/api/macos,node,dotenv
 
 temp/*
-!temp/.gitkeep
 .wwebjs_auth
+.baileys_auth
