--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "api-whatsapp-simple",
+  "name": "api-whatsapp",
   "version": "0.0.5",
   "description": "",
-  "main": "app.js",
+  "main": ".src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch app.js",
-    "start": "node app.js"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/app.ts",
+    "build": "tsc",
+    "start": "tsc && node build/app.js"
   },
   "author": "6rak0",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "prettier": "^2.7.1",
+    "node-dependency-injection": "^3.0.3",
+    "prettier": "^2.8.1",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#fix-buttons-list"
+    "whatsapp-web.js": "1.18.3-alpha.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.17",
+    "@types/qr-image": "^3.2.5",
+    "@types/qrcode-terminal": "^0.12.0",
+    "typescript": "^4.9.4"
   }
 }
