--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-whatsapp",
-  "version": "0.0.5",
-  "description": "",
+  "version": "0.1.0",
+  "description": "notification api using whatsapp",
   "main": ".src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
-    "axios": "^1.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
